fix mobile doctor slider arrows styles because fill option bugged the visibility of arrows on mobile

--- a/styles/blocks/_team.scss
+++ b/styles/blocks/_team.scss
@@ -405,7 +405,7 @@
   color: var(--color-gold);
   // fill: currentColor;
 
-  font-size: 22px;
+  // font-size: 22px;
   cursor: pointer;
   transition: 0.2s;
 
